--- a/public/preventes.html
+++ b/public/preventes.html
@@ -22,9 +22,14 @@
       background-color: #eee;
     }
 
-    th, td {
+    th {
+      border: solid 1px #333; padding: 4px 4px;
+    }
+
+    td {
       border: solid 1px #333; padding: 2px 4px;
     }
+
 
     .container {
       width: 1100px; margin: 0 auto; padding: 48px 0;
@@ -49,7 +54,9 @@
       <table>
         <thead>
           <tr>
-            <th colspan="2">Date</th>
+            <th>Date</th>
+            <th>J</th>
+            <th>Id</th>
             <th>Titre</th>
             <th>Billets</th>
           </tr>
@@ -68,7 +75,8 @@ var temp = _.template([
   "<% _.forEach(data, function (item) { %>",
   "<tr>",
   "<td class='center'><%= moment(item.date).format('ddd D MMM HH:mm') %></td>",
-  "<td class='right'>-<%= daysFromNow(item.date) %></td>",
+  "<td class='center'>-<%= daysFromNow(item.date) %></td>",
+  "<td class='center'><%= item.idSeance %></td>",
   "<td><%= item.titre %></td>",
   "<td class='right'><%= item.tickets.compte %></td>",
   "</tr>",
@@ -82,7 +90,12 @@ $.getJSON("../data/future.json", function (data) {
 
 
 function daysFromNow (d) {
-  return -moment().diff(d, "days");
+  return -moment()
+  .startOf("day")
+  .diff(
+    moment(d).startOf("day"),
+    "days"
+  );
 }
 
 
